<resources>
    <string name="app_name">RandomUsersTestTask</string>
    <string name="test_user_test">Andrew Bondarenko</string>
    <string name="home">Home</string>
    <string name="test_years">25 years old</string>
    <string name="cell_phone">Cell phone</string>
    <string name="phone">+38(050)050_50_50</string>
    <string name="email">Email</string>
    <string name="email_address">andrew_bondaren@gmail.com</string>
    <string name="gender">Gender</string>
    <string name="gender_test">Man</string>
    <string name="profile">Profile</string>
</resources>
