<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/logo"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.04" app:layout_constraintHorizontal_bias="0.515"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_user_test"
            android:textStyle="bold"
            android:id="@+id/user_name"
            app:layout_constraintStart_toStartOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="20dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_years"
            android:id="@+id/years_old"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="@id/user_name"
            app:layout_constraintEnd_toEndOf="@id/user_name"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            android:layout_marginTop="5dp" />


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell_phone"
            android:id="@+id/cell_phone_title"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/card_view_phone"
            app:layout_constraintEnd_toEndOf="@id/years_old"
            app:layout_constraintTop_toBottomOf="@id/years_old"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"/>


    <android.support.v7.widget.CardView
            android:layout_width="250dp"
            android:onClick="callNumber"
            android:layout_height="wrap_content"
            android:id="@+id/card_view_phone"
            app:layout_constraintTop_toBottomOf="@+id/cell_phone_title"
            app:layout_constraintStart_toStartOf="@id/years_old"
            app:layout_constraintEnd_toEndOf="@id/years_old"
            android:layout_marginTop="3dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textStyle="bold"
                android:id="@+id/phone"
                android:textColor="@color/grey"
                android:textSize="12sp"
                />

    </android.support.v7.widget.CardView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/email_title"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/card_view_email"
            app:layout_constraintEnd_toEndOf="@id/card_view_phone"
            app:layout_constraintTop_toBottomOf="@id/card_view_phone"
            android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_bias="0.0"/>


    <android.support.v7.widget.CardView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/card_view_email"
            app:layout_constraintTop_toBottomOf="@+id/email_title"
            app:layout_constraintStart_toStartOf="@id/years_old"
            app:layout_constraintEnd_toEndOf="@id/years_old"
            android:layout_marginTop="3dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textStyle="bold"
                android:id="@+id/email"
                android:textColor="@color/grey"
                android:textSize="12sp"
        />

    </android.support.v7.widget.CardView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:id="@+id/gender_title"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/card_view_gender"
            app:layout_constraintEnd_toEndOf="@id/card_view_email"
            app:layout_constraintTop_toBottomOf="@id/card_view_email"
            android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_bias="0.0"/>


    <android.support.v7.widget.CardView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/card_view_gender"
            app:layout_constraintTop_toBottomOf="@+id/gender_title"
            app:layout_constraintStart_toStartOf="@id/years_old"
            app:layout_constraintEnd_toEndOf="@id/years_old"
            android:layout_marginTop="3dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_test"
                android:textStyle="bold"
                android:id="@+id/gender"
                android:textColor="@color/grey"
                android:textSize="12sp"
        />

    </android.support.v7.widget.CardView>



</android.support.constraint.ConstraintLayout>